--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -262,6 +262,9 @@
     <script src="/vendors/moment/min/moment.min.js"></script>
     <script src="/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
     <script>
+	var homepage = <%- JSON.stringify(homepage) %>;
+console.log(homepage);
+console.log(homepage.Compras);
 var ctx = document.getElementById("comprasChart").getContext('2d');
 var comprasChart = new Chart(ctx, {
     type: 'line',
@@ -269,7 +272,7 @@ var comprasChart = new Chart(ctx, {
         labels: ["Jan", "Fev", "Mar", "Abr", "Mai", "Jun", "Jul", "Ago", "Set", "Out", "Nov", "Dez"],
         datasets: [{
             label: '€',
-            data: [12, 19, 3, 5, 2, 3],
+            data: homepage.Compras,
             backgroundColor: 'rgba(255, 99, 132, 0.2)',
             borderColor: 'rgba(255,99,132,1)',
             borderWidth: 1
@@ -285,8 +288,9 @@ var comprasChart = new Chart(ctx, {
         }
     }
 });
-var vendas = <%- JSON.stringify(vendas) %>;
-var vendas_por_mes = [0,0,0,0,0,0,0,0,0,0,0,0];
+//var vendas = <%- JSON.stringify(homepage.Vendas) %>;
+console.log(homepage.Vendas);
+/*var vendas_por_mes = [0,0,0,0,0,0,0,0,0,0,0,0];
 var vendas_por_cliente = [];
 var vendas_por_artigo = [];
 console.log(vendas);
@@ -305,7 +309,7 @@ vendas.forEach(function(venda){
 	console.log(vendas_por_cliente);
 	vendas_por_cliente.sort(function(a, b){console.log(a);return b - a});
 	console.log(vendas_por_cliente);
-	console.log(Math.max(...vendas_por_cliente))
+	console.log(Math.max(...vendas_por_cliente));*/
 ctx = document.getElementById("vendasChart").getContext('2d');
 var vendasChart = new Chart(ctx, {
     type: 'line',
@@ -313,7 +317,7 @@ var vendasChart = new Chart(ctx, {
         labels: ["Jan", "Fev", "Mar", "Abr", "Mai", "Jun", "Jul", "Ago", "Set", "Out", "Nov", "Dez"],
         datasets: [{
             label: '€',
-            data: vendas_por_mes,
+            data: homepage.Vendas,
             backgroundColor: 'rgba(124,252,0, 0.2)',
             borderColor: 'rgba(124,252,0,1)',
             borderWidth: 1
@@ -329,14 +333,20 @@ var vendasChart = new Chart(ctx, {
         }
     }
 });
+var clientes1 = Object.keys(homepage.TopClientes);
+var clientes2 = clientes1.map(function (i) {
+    return (homepage.TopClientes)[i];
+});
+console.log(clientes1);
+console.log(clientes2);
 ctx = document.getElementById("clientesChart").getContext('2d');
 var clientesChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Jan", "Fev", "Mar", "Abr", "Mai"],
+        labels: clientes1,
         datasets: [{
             label: '€',
-            data: [12, 19, 3, 5, 2, 3],
+            data: clientes2,
             backgroundColor: 'rgba(255,140,0, 0.2)',
             borderColor: 'rgba(255,140,0, 1)',
             borderWidth: 1
@@ -344,14 +354,20 @@ var clientesChart = new Chart(ctx, {
     },
     options: {}
 });
+var artigos1 = Object.keys(homepage.TopArtigos);
+var artigos2 = artigos1.map(function (i) {
+    return (homepage.TopArtigos)[i];
+});
+console.log(artigos1);
+console.log(artigos2);
 ctx = document.getElementById("artigosChart").getContext('2d');
 var artigosChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Jan", "Fev", "Mar", "Abr", "Mai"],
+        labels: artigos1,
         datasets: [{
-            label: '€',
-            data: [12, 19, 3, 5, 2, 3],
+            label: '#',
+            data: artigos2,
             backgroundColor: 'rgba(30,144,255, 0.2)',
             borderColor: 'rgba(30,144,255, 1)',
             borderWidth: 1
@@ -359,14 +375,20 @@ var artigosChart = new Chart(ctx, {
     },
     options: {}
 });
+var fornecedores1 = Object.keys(homepage.TopFornecedores);
+var fornecedores2 = fornecedores1.map(function (i) {
+    return (homepage.TopFornecedores)[i];
+});
+console.log(clientes1);
+console.log(clientes2);
 ctx = document.getElementById("fornecedoresChart").getContext('2d');
 var fornecedoresChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Jan", "Fev", "Mar", "Abr", "Mai"],
+        labels: fornecedores1,
         datasets: [{
             label: '€',
-            data: [12, 19, 3, 5, 2, 3],
+            data: fornecedores2,
             backgroundColor: 'rgba(255,215,0, 0.2)',
             borderColor: 'rgba(255,215,0, 1)',
             borderWidth: 1
