--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -28,34 +28,35 @@
 				<div class="right_col" role="main">
 					<!-- top tiles -->
 					<div class="row tile_count">
-						<div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+						<!--NOTA: Removido pois tem haver com recursos humanos, o que não é planeado para o projecto-->
+						<!--<div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
 							<span class="count_top"><i class="fa fa-user"></i> Total Trabalhadores</span>
 							<div class="count">2500</div>
 							<span class="count_bottom"><i class="green">4% </i> From last Week</span>
-						</div>
+						</div> -->
 						<div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
 						<span class="count_top"></i>Dívidas não pagas</span>
-                        <div class="count">1230.50 &euro; </div>
+                        <div id="dividasForn" class="count">1230.50 &euro; </div>
                         <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>
 					</div>
                     <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
 					<span class="count_top"></i>Artigos vendidos este mês</span>
-					<div class="count green">2,500</div>
+					<div id="vedArtM" class="count green">2,500</div>
 					<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
 					<span class="count_top"><i class="fa fa-user"></i>Total clientes este mês</span>
-					<div class="count">370</div>
+					<div id="clientesMes" class="count">370</div>
 					<span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>12% </i> From last Week</span>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
 					<span class="count_top"><i class="fa fa-user"></i>Stock total atual</span>
-					<div class="count">9,315</div>
+					<div id="stktotal" class="count">9,315</div>
 					<span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>34% </i> From last Week</span>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
 					<span class="count_top"><i class="fa fa-user"></i>Encomendas feitas este mês</span>
-					<div class="count">130</div>
+					<div id="encomendasMes" class="count">130</div>
 					<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
 				</div>
 			</div>
@@ -264,6 +265,11 @@
 <script>
 	var homepage = <%- JSON.stringify(homepage) %>;
 	console.log(homepage);
+	document.getElementById("dividasForn").innerText = homepage.totalDivida + " €"
+	document.getElementById("vedArtM").innerText = homepage.totalArtigosVendidosMes
+	document.getElementById("clientesMes").innerText = homepage.totalClientesMes
+	document.getElementById("stktotal").innerText = homepage.stktotal
+	document.getElementById("encomendasMes").innerText = homepage.totalEncomendas
 	console.log(homepage.Compras);
 	var ctx = document.getElementById("comprasChart").getContext('2d');
 	var comprasChart = new Chart(ctx, {
