--- a/views/pages/artigos/show.ejs
+++ b/views/pages/artigos/show.ejs
@@ -98,29 +98,22 @@
 											<table id="comprasTable" class="table table-striped table-bordered bulk_action">
 												<thead>
 													<tr>
-														<th class="column-title">Venda ID</th>
+														<th class="column-title">Compra ID</th>
 														<th class="column-title">Entidade</th>
-														<th class="column-title">Número Documento</th>
 														<th class="column-title">Data</th>
 														<th class="column-title">Total Mercadoria</th>
-														<th class="column-title">Linhas Documento</th>
+														<th class="column-title">Linha Documento</th>
 													</tr>
 												</thead>
 												
 												<tbody>
-													<% (artigo.compras).forEach(function(ven){ %>
+													<% (compras).forEach(function(ven){ %>
 													<tr>
-														<td><a href="/vendas/<%= ven.InvoiceNo %>"><%= ven.InvoiceNo %></a></td>
-														<td><a href="/clientes/<%= ven.CustomerID %>"><%= ven.CustomerID %></a></td>
-														<td><%= ven.NumDoc %></td>
-														<td><%= ven.InvoiceDate %></td>
-														<td><%= ven.GrossTotal %></td>
-														<td>
-															<% (ven.LinhasDoc).forEach(function(lin){ %>
-															<%= lin.CodArtigo %>
-															&#9866;
-															<% }); %>
-														</td>
+														<td><a href="/compras/<%= ven.iddoc %>"><%= ven.iddoc %></a></td>
+														<td><a href="/fornecedores/<%= ven.entidade %>"><%= ven.entidade %></a></td>
+														<td><%= ven.date %></td>
+														<td><%= ven.quantity %></td>
+														<td><%= ven.linha %></td>
 													</tr>
 													<% }); %>
 												</tbody>
@@ -150,9 +143,11 @@
 														<!-- <th>
 															<input type="checkbox" id="check-all" class="flat">
 														</th> -->
-														<th class="column-title">Código </th>
-														<th class="column-title">Descrição </th>
-														<th class="column-title">STKAtual </th>
+														<th class="column-title">Venda ID</th>
+														<th class="column-title">Entidade</th>
+														<th class="column-title">Data</th>
+														<th class="column-title">Total Mercadoria</th>
+														<th class="column-title">Linha Documento</th>
 														<!--<th class="bulk-actions" colspan="7">
 															<a class="antoo" style="color:#fff; font-weight:500;">Bulk Actions ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i></a>
 														</th> -->
@@ -160,14 +155,16 @@
 												</thead>
 												
 												<tbody>
-													<% (artigo.vendas).forEach(function(art){ %>
+													<% (vendas).forEach(function(ven){ %>
 													<tr>
 														<!-- <td class="a-center ">
 															<input type="checkbox" class="flat" name="table_records">
 														</td> -->
-														<td><a href="/artigos/<%= art.CodArtigo %>"><%= art.CodArtigo %></a></td>
-														<td><a href="/artigos/<%= art.CodArtigo %>"><%= art.DescArtigo %></a></td>
-														<td> <%= art.STKAtual %> </td>
+														<td><a href="/vendas/<%= ven.iddoc %>"><%= ven.iddoc %></a></td>
+														<td><a href="/clientes/<%= ven.entidade %>"><%= ven.entidade %></a></td>
+														<td><%= ven.date %></td>
+														<td><%= ven.quantity %></td>
+														<td><%= ven.linha %></td>
 													</tr>
 													<% }); %>
 												</tbody>
@@ -207,6 +204,10 @@
 		<script src="/vendors/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
 		<script src="/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
 		<script src="/vendors/datatables.net-scroller/js/dataTables.scroller.min.js"></script>
+		<script>
+			$('#comprasTable').dataTable();
+			$('#vendasTable').dataTable();
+		</script>
 		<% include ../../partials/post_footer %>
 	</body>
 	
